Fixes broken textarea. Favicon still not showing up. WIP

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@ body {
     min-height: 100vh;
     background: #e7e7e7;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     padding: 40px; 
     width: 600px
